# Huawei-EmbeddedSoftwareChallenge-2024

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp  main_xin.cpp  readme.md  valid.cpp
cankao/: CMakeLists.txt  决赛代码.cpp
data/0/: in.txt  out.txt
data/1/: case0.in  case2.in  case4.in  case6.in  case8.in  in.txt  out.txt  report_20240720-040319.csv
data/2/: in.txt  out.txt
data/3/: in.txt  out.txt
data/4/: in.txt  out.txt
data/5/: in.txt  out.txt
data/6/: in.txt  out.txt
data/7/: in.txt  out.txt
data/8/: in.txt  out.txt
data/9/: in.txt  out.txt
pantiqi/: CMakeLists.txt  pantiqi.cpp
shengchengqi/: CMakeLists.txt  shengchengqi.cpp
